# ha-ideenergy

./: .gitignore  .pre-commit-config.yaml  README.es.md  README.md  TODO.md  UPGRADE-TO-3.x.md  pyproject.toml
.github/workflows.disabled/: release.yml
.tmp_inspect/: homeassistant_historical_sensor-3.0.0a3-py3-none-any.whl
config/: configuration.yaml
custom_components/ideenergy/: __init__.py  backfill.py  config_flow.py  const.py  coordinator.py  data.py  manifest.json  sensor.py  services.yaml  store.py
tests/: conftest.py  test_manual_fetch.py
