[project]
name = "homeassistant-ideenergy"
version = "2026.1.0"
dependencies = [
    "importlib-metadata; python_version >= '3.13.2'",
]
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"},
]
readme = "README.md"
description ="Historical sensors for HomeAssistant"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13.2"

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["custom_components/ideenergy"]

[tool.pyupgrade]
addopts = "--py313-plus"
