[project]
name = "homeassistant-ideenergy"
version = "2026.1.0"
dependencies = [
    "importlib-metadata; python_version >= '3.14'",
]
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"},
]
readme = "README.md"
description ="Historical sensors for HomeAssistant"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"

[tool.black]
target-version = ['py314']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["custom_components/ideenergy"]

[tool.pyupgrade]
addopts = "--py314-plus"

[dependency-groups]
dev = [
    "homeassistant>=2026.2.3",
    "ipdb>=0.13.13",
    "ipython>=9.12.0",
    "pre-commit>=4.5.1",
]
